Fix misalignment on very long usedby names

--- a/extras/dev/assets/less/makerbase.less
+++ b/extras/dev/assets/less/makerbase.less
@@ -633,6 +633,8 @@ form.form-inline {
 	h3 {
 		margin: 0.5em;
 		font-size: 1.2em;
+		overflow: hidden;
+		height: 1.1em;
 		a {
 			color: #000;
 			img {
